--- a/plationline/catalog/view/template/payment/plationline.twig
+++ b/plationline/catalog/view/template/payment/plationline.twig
@@ -16,7 +16,7 @@
         var element = this;
 
         $.ajax({
-            url: 'index.php?route=extension/plationline/payment/plationline.confirm&language={{ language }}',
+            url: 'index.php?route=extension/plationline/payment/plationline|confirm&language={{ language }}',
             dataType: 'json',
             beforeSend: function () {
                 $(element).button('loading');
