--- a/plationline/admin/view/template/payment/plationline.twig
+++ b/plationline/admin/view/template/payment/plationline.twig
@@ -173,7 +173,7 @@
                                             href="https://merchants.plationline.ro" target="_blank"><b>https://merchants.plationline.ro</b></a>,
                                     sectiunea <b>Settings</b>, tab-ul <b>Instant status notification</b>. Completati
                                     adresa
-                                    <b> {{ constant('HTTP_CATALOG') }}index.php?route=extension/plationline/payment/plationline|itsn</b>
+                                    <b> {{ constant('HTTP_CATALOG') }}index.php?route=extension/plationline/payment/plationline.itsn</b>
                                     si selectati metoda <b>POST</b>
                                 </div>
                             </div>
